[tool.poetry]
name = "01-core"
version = "0.0.1"
description = "The python at the heart of the 01."
authors = ["Open Interpreter <killian@openinterpreter.com>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.11"
open-interpreter = "^0.2.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
