[tool.poetry]
name = "01-core"
version = "0.0.1"
description = "The python at the heart of the 01."
authors = ["Open Interpreter <killian@openinterpreter.com>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.10"
open-interpreter = "^0.2.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
fastapi = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
